Fix game width on mobile

--- a/web/src/Game/Game.css
+++ b/web/src/Game/Game.css
@@ -71,12 +71,25 @@
       }
 
 .game-container .game .game-main .team {
-        width: 150px;
         display: -webkit-box;
         display: flex;
         -webkit-box-align: center;
                 align-items: center;
       }
+
+@media (min-width: 768px) {
+
+.game-container .game .game-main .team {
+          width: 150px
+      }
+        }
+
+@media (max-width: 767px) {
+
+.game-container .game .game-main .team {
+          width: 100px
+      }
+        }
 
 .game-container .game .game-main .team.home-team {
           text-align: right;
